--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 click==6.7
+env==0.1.0
 Flask==1.0.2
 flask-marshmallow==0.9.0
 Flask-SQLAlchemy==2.3.2
@@ -9,6 +10,7 @@ MarkupSafe==1.0
 marshmallow==2.15.1
 postgis==1.0.4
 psycopg2==2.7.4
+psycopg2-binary==2.7.4
 six==1.11.0
 SQLAlchemy==1.2.7
 Werkzeug==0.14.1
