--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,13 @@ itsdangerous==0.24
 Jinja2==2.10
 MarkupSafe==1.0
 marshmallow==2.15.1
+numpy==1.14.3
+pandas==0.22.0
 postgis==1.0.4
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
+python-dateutil==2.7.3
+pytz==2018.4
 six==1.11.0
 SQLAlchemy==1.2.7
 Werkzeug==0.14.1
